# rust-axum-rest-api

./: Cargo.toml
src/: error.rs  main.rs  model.rs
src/web/: middleware_auth.rs  mod.rs  routes_login.rs  routes_ticket.rs
tests/: test.rs
