[package]
name = "rust-axum-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Axum web framework
axum = {version="0.6", features = ["macros"]}
# Json Serializer
serde = {version = "1", features= ["derive"]}
serde_json = "1"
# Tower 
# It has built-in service like middleware that can use with axum because axum build on top this framework
tower-http = {version ="0.4", features = ["fs"]}
# middleware for generate cookie
tower-cookies = "0.9"
async-trait = "0.1"
strum_macros = "0.24"

[dev-dependencies]
anyhow = "1"
# for debug and run test locally
cargo-watch = "8.5.3"
# library for test http client 
httpc-test = "0.1.1"
